//protoc --go_out=plugins=grpc:./ *.proto
syntax = "proto3";
package auth_server_grpc;
option go_package = "./pb";

message signReq{
  string instanceID = 1;
}

message signResp {
  string tokenString = 1;
}

service SignServer {
  rpc SignToken(signReq) returns (signResp) {}
}